[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urlconstructor"
version = "1.0.0"
description = "simple as possible one function python library for build url from protocol address and port"
readme = "README.md"
authors = [{name = "Sergeial1972-user", email = "sergeial1972@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[project.urls]
Repository = "https://github.com/sergeial1972-user/url_constructor"
